--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -37,6 +37,8 @@ border-bottom: none !important;
 .highlight pre {
   width:100%;
   overflow-x: auto;       // this sets the scrolling in x
+  word-break:normal;
+  word-wrap:normal;
 }
 
 .highlight pre code {
