--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -48,6 +48,10 @@ border-bottom: none !important;
   white-space: pre;       // forces <code> to respect <pre> formatting
 }
 
+.linenos pre {
+	width:50px;
+}
+
 /* Solarized Light
 
 For use with Jekyll and Pygments
