--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -30,8 +30,7 @@ border-bottom: none !important;
 }
 
 .highlight pre code * {
-  width:100%;
-  word-break:normal;
+  white-space: nowrap;    // this sets all children inside to nowrap
 }
 
 .highlight pre {
