--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -32,6 +32,11 @@ border-bottom: none !important;
 /*
 	Enable horizontal scrolling
 */
+.highlight pre code * {
+  width:100%;
+  word-break:normal;
+  white-space: nowrap;    // this sets all children inside to nowrap
+}
 
 .highlight pre {
   width:100%;
