--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -40,6 +40,7 @@ border-bottom: none !important;
   overflow-x: auto;       // this sets the scrolling in x
   word-break: normal;
   word-wrap:normal;
+  white-space: nowrap;
 }
 
 .highlight pre code {
