--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -55,6 +55,9 @@ border-bottom: none !important;
 
 .code {
 	width:100%;
+	word-break:normal;
+    white-space: nowrap;
+	overflow-x: auto;
 }
 
 /* Solarized Light
