--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -53,7 +53,7 @@ border-bottom: none !important;
   white-space: pre;
 }
 
-.code {
+.code * {
 	width:100%;
 	word-break:normal;
     white-space: nowrap;
