--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -31,7 +31,7 @@ border-bottom: none !important;
 
 .linenodiv {
   width:45px;
-  background-color: gree;
+  background-color: green;
 }
 
 .highlight pre code * {
