--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -52,6 +52,10 @@ border-bottom: none !important;
   white-space: pre;
 }
 
+.code * {
+	width:100%;
+}
+
 /* Solarized Light
 
 For use with Jekyll and Pygments
