--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -56,7 +56,7 @@ border-bottom: none !important;
 	width:100%; 
 }
 
-.highlighttable {
+.code {
   width:100%;
   word-break:normal;
   white-space: pre;
