--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -52,10 +52,20 @@ border-bottom: none !important;
   white-space: pre;
 }
 
+.highlighttable tbody {
+    display: block;
+    height: 120px;
+    overflow: auto;
+    float: left;
+    width: 100%;
+}
+
 .code {
   width:100%;
   overflow-x: scroll;
 }
+
+
 
 /* Solarized Light
 
