--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -53,6 +53,11 @@ border-bottom: none !important;
   white-space: pre;
 }
 
+.code {
+  width:100%;
+  overflow-x: auto;
+}
+
 
 /* Solarized Light
 
