--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -30,7 +30,7 @@ border-bottom: none !important;
 }
 
 .linenodiv {
-  width:45px;
+  /* width:45px; */
 }
 
 .highlight pre code * {
@@ -54,8 +54,7 @@ border-bottom: none !important;
 }
 
 .highlighttable {
-	word-wrap: break-word;
-    table-layout: fixed
+	white-space:nowrap;
 }
 
 .code {
