--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -47,6 +47,8 @@ border-bottom: none !important;
 /* if linenos=table is activated ... */
 .linenos {
   vertical-align:top;
+  width:1px;
+  white-space: nowrap;
 }
 
 .highlighttable {
