--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -32,6 +32,7 @@ border-bottom: none !important;
 .highlight pre {
   overflow-x: auto;
   white-space: pre;
+  background-color : transparent;
 }
 
 .highlight pre code {
