--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -38,6 +38,8 @@ border-bottom: none !important;
 
 .highlight pre code {
   white-space: pre;
+  word-wrap:normal;
+  word-break:normal;
 }
 
 /* if linenos=table is activated ... */
