--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -32,6 +32,8 @@
 .highlight pre {
     width:100%;
     overflow-x: auto;
+    word-break: normal;
+    word-wrap:normal;
     background-color : transparent;
     border-radius:0px;
     white-space: pre;
