--- a/assets/js/bootstrap-tagsinput-0.3.9/bootstrap-tagsinput.css
+++ b/assets/js/bootstrap-tagsinput-0.3.9/bootstrap-tagsinput.css
@@ -15,7 +15,7 @@
   border: none;
   box-shadow: none;
   outline: none;
-  background-color: blue;
+  background-color: transparent;
   padding: 0;
   margin: 0;
   width: auto !important;
