--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -68,7 +68,7 @@
             </button>
             <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
         </div>
-        <div class="navbar-collapse collapse navbar-responsive-collapse" ng-controller="GithubCtrl">
+        <div class="navbar-collapse collapse navbar-responsive-collapse" style="padding-right: 0px;" ng-controller="GithubCtrl">
             <ul class="nav navbar-nav">
                 {% assign pages_list = site.pages %}
                 {% assign group = 'navigation' %}
