--- a/assets/js/bootstrap-tagsinput-0.3.9/bootstrap-tagsinput.css
+++ b/assets/js/bootstrap-tagsinput-0.3.9/bootstrap-tagsinput.css
@@ -9,7 +9,7 @@
   vertical-align: middle;
   border-radius: 4px;
   max-width: 100%;
-  line-height: 22px;
+  line-height: 22px
 }
 .bootstrap-tagsinput input {
   border: none;
@@ -18,7 +18,7 @@
   background-color: transparent;
   padding: 0;
   margin: 0;
-  width: auto !important;
+  width: 100% !important;
   max-width: inherit;
 }
 .bootstrap-tagsinput input:focus {
