--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,5 @@
+@import url("//fonts.googleapis.com/css?family=Lato:400,700,400italic");/*!
+
 body  {
 	font-family: Lato,​'Helvetica Neue',​Helvetica,​Arial,​sans-serif;
 }
