--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -20,7 +20,7 @@
 							<span class="caret caret-reversed" ng-show="reverseSort"></span>
 						</span>
 					<th class="col-xs-4 col-md-4 hidden-xs"><span class="sort" data-sort="tags">
-						<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
+						<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;padding:5px" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
 					</th>
 				</tr>
 				</thead>
