--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -29,7 +29,7 @@
 					<td class="date hidden-xs">
 						<div>
 							
-							<span style="font-size:0.8em;">{{ post.Date | date:'dd MM yyyy' }}</span>
+							<span style="font-size:0.8em;">{{ post.Date | date:'dd MMM yyyy' }}</span>
 						</div>
 						<div>
 							<img width="120px" ng-src="{{ post.Preview || '' }}">
