--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -32,7 +32,7 @@
 							<a href="{{post.Url}}">{{ post.Title }}</a><br>
 							http://jsfiddle.net/P4fSZ/
 							-->
-							<span style="font-size:0.8em;">{{ post.Date | date:'dd MMM yyyy' }}</span>
+							<span style="font-size:0.8em;">{{ post.Date | date:'yyyy' }}</span>
 						</div>
 						<div>
 							<img width="120px" ng-src="{{ post.Preview || '' }}">
