--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,3 +1,4 @@
+<object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/NDjB_7lAkO8&hl=en&fs=1"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/NDjB_7lAkO8&hl=en&fs=1" type="application/x-shockwave-flash" allowfullscreen="true" width="425" height="344"></embed></object>
 <div id="entry-list">
     <div class="clearfix">
 			<table class="table table-striped" style="table-layout:fixed; word-wrap: break-word;" >
