--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -13,7 +13,7 @@
 							</span>
 						</a>
 					</th>
-					<th class="col-md-8 hidden-xs">
+					<th class="col-xs-12 col-md-8 hidden-xs">
 						<a href="#" ng-click="orderByField='Title'; reverseSort = !reverseSort">
 						Posts
 						<span ng-show="orderByField == 'Title'">
