--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,4 +1,4 @@
-<iframe width="560" height="315"  src="//www.youtube.com/v/NDjB_7lAkO8&hl=en&fs=1" frameborder="0"></iframe>
+<iframe width="560" height="315"  src="http://www.youtube.com/v/NDjB_7lAkO8&hl=en&fs=1" frameborder="0"></iframe>
 <div id="entry-list">
     <div class="clearfix">
 			<table class="table table-striped" style="table-layout:fixed; word-wrap: break-word;" >
