--- a/app/css/style.css
+++ b/app/css/style.css
@@ -8,3 +8,19 @@ body  {
     border-top-width: 0;
     border-bottom: 4px solid;
 }
++
+/* Youtube width=100% */
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+}
+
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
