--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,4 +1,6 @@
-<iframe width="560" height="315" src="//www.youtube.com/embed/NDjB_7lAkO8" frameborder="0" allowfullscreen></iframe>
+<div class="videoWrapper">
+    <iframe width="100%" src="//www.youtube.com/embed/NDjB_7lAkO8" frameborder="0" allowfullscreen></iframe>
+</div>
 <div id="entry-list">
     <div class="clearfix">
 			<table class="table table-striped" style="table-layout:fixed; word-wrap: break-word;" >
