--- a/_includes/accessoires/image-caption.html
+++ b/_includes/accessoires/image-caption.html
@@ -1,6 +1,6 @@
 <div id="page-wrap" class="clear-block">
     <figure class="cap-bot">
-        <img src="{{ include.url }}" alt="{{ include.description }}" class="img-polaroid">
+        <img width="100%" src="{{ include.url }}" alt="{{ include.description }}" class="img-polaroid">
         <figcaption>{{ include.description }}</figcaption>
     </figure>
 </div>
