--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,4 +1,4 @@
-@import url("//fonts.googleapis.com/css?family=Lato:400,700,400italic");/*!
+*!
 
 body  {
 	font-family: Lato,​'Helvetica Neue',​Helvetica,​Arial,​sans-serif;
@@ -8,7 +8,7 @@ body  {
     border-top-width: 0;
     border-bottom: 4px solid;
 }
-+
+
 /* Youtube width=100% */
 .videoWrapper {
 	position: relative;
