--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -101,10 +101,10 @@
 				<ul ng-show="user.name" class="nav navbar-nav">
 					<li><a href="/app/admin/fork.html">Clone/Fork</a></li>
 					<li ng-hide="!user.isAdmin"><a href="/app/admin/editConfig.html">Edit Config</a></li>
-					<li ng-hide="!user.isAdmin"><a href="/app/admin/edit.html">Create Post</a></li>
 					<li ng-hide="!user.isAdmin"><a href="/app/admin/admin.html">Admin</a></li>
 					<li><a href="#" ng-click="logout()">Logout</a></li>
-				</ul>
+                    <li<a href="/app/admin/about.html">Create Post</a></li>
+                </ul>
 			</div>
         </div>
     </div>
