added dependency status in readme file

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -103,7 +103,7 @@
 					<li ng-hide="!user.isAdmin"><a href="/app/admin/editConfig.html">Edit Config</a></li>
 					<li ng-hide="!user.isAdmin"><a href="/app/admin/admin.html">Admin</a></li>
 					<li><a href="#" ng-click="logout()">Logout</a></li>
-                    <li<a href="/app/admin/about.html">Create Post</a></li>
+                    <li><a href="/app/admin/about.html">Create Post</a></li>
                 </ul>
 			</div>
         </div>
